compiler/test/conformance/invalid/inv_if_no_block.tu
// INVÁLIDO: if exige bloco "{ ... }", não um statement solto
fn main() {
  if true
    print("oi")
}
